--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="./game.js" defer></script>
 </head>
 <body>
-    
+    <div class="board">
+        <div class="row" data-row="0">
+            <div class="cell" data-col="0"></div>
+            <div class="cell" data-col="1"></div>
+            <div class="cell" data-col="2"></div>
+        </div>
+        <div class="row" data-row="1">
+            <div class="cell" data-col="0"></div>
+            <div class="cell" data-col="1"></div>
+            <div class="cell" data-col="2"></div>
+        </div>
+        <div class="row" data-row="2">
+            <div class="cell" data-col="0"></div>
+            <div class="cell" data-col="1"></div>
+            <div class="cell" data-col="2"></div>
+        </div>
+    </div>
 </body>
 </html>
