Implement game UI

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css">
     <script src="./game.js" defer></script>
+    <script src="./gameUI.js" defer></script>
 </head>
 <body>
     <div class="board">
@@ -25,5 +26,8 @@
             <div class="cell" data-col="2"></div>
         </div>
     </div>
+    <p class="turn">Player X's turn</p>
+    <p class="message"></p>
+    <button>Reset</button>
 </body>
 </html>
