--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </div>
     <p class="turn">Player X's turn</p>
     <p class="message"></p>
-    <button>Reset</button>
+    <button id="reset">🔃</button>
 </body>
 </html>
