Add reset button and Style X,O and messages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./gameUI.js" defer></script>
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
     <div class="board">
         <div class="row" data-row="0">
             <div class="cell" data-col="0"></div>
@@ -26,8 +27,8 @@
             <div class="cell" data-col="2"></div>
         </div>
     </div>
-    <p class="turn">Player X's turn</p>
+    <p class="turn">Player ✖️'s turn</p>
     <p class="message"></p>
-    <button id="reset">🔃</button>
+    <button id="reset">RESET</button>
 </body>
 </html>
